# mocap4ros2_configuration_from_mocap

./: CMakeLists.txt  README.md  package.xml
include/configuration_from_mocap/: estimator.hpp  frame_difference.hpp  geometry_lib.h  marker_file_exporter.hpp  marker_file_updater.hpp  marker_lib.hpp  marker_sim.hpp  urdf_math.h
launch/: estimator.launch.py  marker_sim.launch.py
src/: estimator.cpp  estimator_main.cpp  frame_difference.cpp  frame_difference_main.cpp  marker_file_exporter.cpp  marker_file_exporter_main.cpp  marker_file_updater.cpp  marker_file_updater_main.cpp  marker_lib.cpp  marker_sim.cpp  marker_sim_main.cpp
