<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>configuration_from_mocap</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="floris.erich@aist.go.jp">floris</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tinyxml_vendor</depend>
  <depend>mocap4ros_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen3</depend>
  <depend>urdf</depend>
  <depend>marker_viz_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
